Stockage dans chromadb + récupération de conversation

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
 tourism_agent_system/Agent/__pycache__/memory_agent.cpython-312.pyc
 tourism_agent_system/Agent/__pycache__/Agent.cpython-312.pyc
 tourism_agent_system/database/__pycache__/fill_db.cpython-312.pyc
+tourism_agent_system/Agent/__pycache__/orchestrator.cpython-312.pyc
