--- a/tourism_agent_system/config.json
+++ b/tourism_agent_system/config.json
@@ -16,21 +16,22 @@
     },
     "agents": {
         "coordinator": {
+            "name": "Coordinateur",
             "role": "Coordinateur",
             "goal": "Gérer la communication entre les agents et coordonner leurs actions",
             "backstory": "Expert en gestion de projet et coordination d'équipe, capable d'optimiser le flux de travail entre les agents"
         },
         "memory": {
-            "name": "Agent de Mémoire",
+            "name": "Mémoire",
             "role": "Gestionnaire de Mémoire",
             "goal": "Maintenir et gérer l'historique des conversations entre l'utilisateur et le système",
             "backstory": "Expert en gestion de données conversationnelles, capable de stocker et d'organiser efficacement l'historique des échanges"
         },
         "interactional": {
-            "name": "Agent de Communication",
+            "name": "Communication",
             "role": "Assistant de communication",
-            "goal": "Gérer les interactions avec l'utilisateur",
-            "backstory": "Assistant de communication expérimenté, capable de gérer les conversations avec l'utilisateur"
+            "goal": "Gérer les interactions avec l'utilisateur de manière naturelle et efficace",
+            "backstory": "Expert en communication, capable de maintenir des conversations fluides et pertinentes avec l'utilisateur"
         }
     }
 } 
