[config.json, emotion_detection_agent.py] - ajout de l'agent de détection d’émotion dans la config JSON - création de la classe EmotionDetectionAgent pour analyser l’état émotionnel de l’utilisateur à partir du message

--- a/tourism_agent_system/config.json
+++ b/tourism_agent_system/config.json
@@ -31,6 +31,12 @@
             "role": "Assistant de communication",
             "goal": "Gérer les interactions avec l'utilisateur",
             "backstory": "Assistant de communication expérimenté, capable de gérer les conversations avec l'utilisateur"
+        },
+        "emotion_detection": {
+            "name": "Agent de Détection d Émotion",
+            "role": "Analyseur émotionnel",
+            "goal": "Détecter l état émotionnel de l utilisateur à partir de ses messages",
+            "backstory": "Spécialiste de l analyse émotionnelle des textes, il est capable d identifier rapidement l émotion dominante dans les propos de l utilisateur pour aider à personnaliser la réponse du système"
         }
     }
 } 
