[config.json, intent_detection_agent.py] Ajout de l'agent "intent_detector" pour l'extraction d’intention et de slots  - Ajout de la définition de l’agent "intent_detector" dans config.json - Création de la classe intentDetectionAgent dans intent_detection_agent.py - Intégration de l’agent dans l’orchestrateur via AgentOrchestrator

--- a/tourism_agent_system/config.json
+++ b/tourism_agent_system/config.json
@@ -44,6 +44,13 @@
             "role": "Générateur de réponses contextuelles",
             "goal": "Composer des réponses contextuelles et générer des questions naturelles pour collecter des informations manquantes",
             "backstory": "Expert en génération de texte, capable de créer des réponses pertinentes et des questions naturelles adaptées au contexte et aux émotions de l'utilisateur"
+        },
+        "intent_slot_extractor": {
+            "name": "Détecteur d’intention",
+            "role": "Analyste d’intention",
+            "goal": "Identifier l’intention de l’utilisateur et extraire les entités pertinentes",
+            "backstory": "Spécialiste du traitement du langage naturel, capable d’identifier ce que l’utilisateur souhaite réellement faire ou demander, en extrayant les intentions et les entités clés"
         }
+
     }
 } 
