--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,4 @@ tourism_agent_system/database/__pycache__/fill_db.cpython-312.pyc
 tourism_agent_system/Agent/__pycache__/orchestrator.cpython-312.pyc
 tourism_agent_system/Agent/__pycache__/emotion_detection_agent.cpython-312.pyc
 chroma_db/
+/tourism_agent_system/Agent/__pycache__
