--- a/tourism_agent_system/config.json
+++ b/tourism_agent_system/config.json
@@ -1,7 +1,7 @@
 {
     "model": {
-        "name": "llama3.2",
-        "temperature": 0.7,
+        "name": "mistral",
+        "temperature": 0.3,
         "max_tokens": 2000
     },
     "search": {
@@ -46,16 +46,16 @@
             "backstory": "Expert en génération de texte, capable de créer des réponses pertinentes et des questions naturelles adaptées au contexte et aux émotions de l'utilisateur"
         },
         "intent_slot_extractor": {
-            "name": "Détecteur d’intention",
-            "role": "Analyste d’intention",
-            "goal": "Identifier l’intention de l’utilisateur et extraire les entités pertinentes",
-            "backstory": "Spécialiste du traitement du langage naturel, capable d’identifier ce que l’utilisateur souhaite réellement faire ou demander, en extrayant les intentions et les entités clés"
+            "name": "Détecteur d'intention",
+            "role": "Analyste d'intention",
+            "goal": "Identifier l'intention de l'utilisateur et extraire les entités pertinentes",
+            "backstory": "Spécialiste du traitement du langage naturel, capable d'identifier ce que l'utilisateur souhaite réellement faire ou demander, en extrayant les intentions et les entités clés"
         },
         "dialogue_planner": {
             "name": "Planificateur de dialogue",
             "role": "Orienteur de la conversation",
-            "goal": "Choisir la prochaine question à poser à l’utilisateur en fonction des slots manquants",
-            "backstory": "Expert en planification conversationnelle, capable de guider intelligemment l’échange pour collecter toutes les informations nécessaires à une réponse complète"
+            "goal": "Choisir la prochaine question à poser à l'utilisateur en fonction des slots manquants",
+            "backstory": "Expert en planification conversationnelle, capable de guider intelligemment l'échange pour collecter toutes les informations nécessaires à une réponse complète"
         }
     }
 } 
