ajout de l'API fast API

--- a/tourism_agent_system/config.json
+++ b/tourism_agent_system/config.json
@@ -1,6 +1,6 @@
 {
     "model": {
-        "name": "mistral",
+        "name": "llama3",
         "temperature": 0.3,
         "max_tokens": 2000
     },
